# px4_test

./: .gitignore  PROJECT_STRUCTURE.md  README.md
docs/: error_bucket_template.md  full_flight_chain_checklist.md  (+5 more)
px4_ros2_ws/src/air_ground_playground/: README_minimal_platform.md  README_vendor_strategy.md  package.xml  setup.cfg  setup.py
px4_ros2_ws/src/air_ground_playground/air_ground_playground/: ground_robot_commander.py  twist_to_twist_stamped_bridge.py
px4_ros2_ws/src/air_ground_playground/config/: rover_out_and_back.yaml  rover_square.yaml
px4_ros2_ws/src/air_ground_playground/launch/: air_ground_minimal.launch.py  air_ground_with_bcr.launch.py  air_ground_with_gz_diffbot.launch.py  air_ground_with_vendor_diffbot.launch.py  vendor_bcr_only.launch.py  vendor_diffbot_only.launch.py  vendor_gz_diffbot_only.launch.py
px4_ros2_ws/src/air_ground_playground/models/: README_models.md
px4_ros2_ws/src/air_ground_playground/scripts/: fetch_vendor_bcr.sh  fetch_vendor_diffbot.sh  fetch_vendor_gz_diffbot.sh
px4_ros2_ws/src/air_ground_playground/worlds/: README_worlds.md
px4_ros2_ws/src/my_px4_offboard/: README_standard_mission.md  README_workspace.md  package.xml  setup.cfg  setup.py
px4_ros2_ws/src/my_px4_offboard/config/: hover.yaml  square.yaml
px4_ros2_ws/src/my_px4_offboard/launch/: offboard_standard_mission.launch.py
px4_ros2_ws/src/my_px4_offboard/my_px4_offboard/: mission_executor.py  offboard_state_machine.py  offboard_takeoff_hover.py  offboard_trajectory.py  px4_state_monitor.py  safety_guard.py  standard_mission_node.py  trajectory_library.py
(+25 files in other folders)
