<?xml version="1.0"?>
<package format="3">
  <name>air_ground_playground</name>
  <version>0.1.0</version>
  <description>Minimal air-ground playground package for PX4 + ROS 2 workspaces</description>

  <maintainer email="you@example.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>my_px4_offboard</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
